application/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: streaming-service-app
  labels:
    streaming-service: api
spec:
  selector:
    streaming-service: api
  ports:
    - name: http
      port: 5000
      targetPort: 5000
