application/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    streaming-service: frontend
  name: frontend
  namespace: streaming-service-app
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
  selector:
    streaming-service: frontend
